Media changes were added

--- a/app/assets/team.html
+++ b/app/assets/team.html
@@ -86,7 +86,7 @@
                         <div class="template__grid">
                             <div class="team-template__list">
                                 <div class="row">
-                                    <div class="col-6 team-template__list-col">
+                                    <div class="col-12 col-sm-6 team-template__list-col">
                                         <a href="#" class="team-item">
                                             <div class="team-item__img">
                                                 <img src="img/team-3.jpg"
@@ -101,7 +101,7 @@
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="col-6 team-template__list-col">
+                                    <div class="col-12 col-sm-6 team-template__list-col">
                                         <a href="#" class="team-item">
                                             <div class="team-item__img">
                                                 <img src="img/team-4.jpg"
@@ -118,7 +118,7 @@
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="col-6 team-template__list-col">
+                                    <div class="col-12 col-sm-6 team-template__list-col">
                                         <a href="#" class="team-item">
                                             <div class="team-item__img">
                                                 <img src="img/team-5.jpg"
@@ -130,7 +130,7 @@
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="col-6 team-template__list-col">
+                                    <div class="col-12 col-sm-6 team-template__list-col">
                                         <a href="#" class="team-item">
                                             <div class="team-item__img">
                                                 <img src="img/team-6.jpg"
