--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -526,6 +526,9 @@
                                             <div class="swiper-slide media-swiper__instance-slide">
                                                 <img class="media-swiper__img" src="img/team-2.jpg" alt="alt">
                                             </div>
+                                            <div class="swiper-slide media-swiper__instance-slide">
+                                                <img class="media-swiper__img" src="img/team-2.jpg" alt="alt">
+                                            </div>
                                         </div>
                                     </div>
                                     <footer class="media-swiper__footer">
