Layout was addded

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -721,7 +721,7 @@
                     </div>
                 </div>
             </div>
-            <div class="m-layout__bottom m-layout__row">
+            <div class="m-layout__middle m-layout__row">
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
@@ -733,6 +733,18 @@
                                 <a class="m-layout__grid-link" href="#">Попечительский совет</a>
                                 <a class="m-layout__grid-link" href="#">Новости и события</a>
                                 <a class="m-layout__grid-link" href="#">Контакты</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="m-layout__bottom m-layout__row">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="m-layout__footer">
+                                <a class="m-layout__footer-link" href="tel:+74951807338">Телефон<span class="m-layout__footer-link-value">+7(495) 180-73-38</span></a>
+                                <a class="m-layout__footer-link" href="mailto:expert@fondgenom.ru">Эл. почта<span class="m-layout__footer-link-value">expert@fondgenom.ru</span></a>
                             </div>
                         </div>
                     </div>
