Changes were added

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -32,9 +32,7 @@
                     <div class="header__wrapper">
                         <div class="header__options">
                             <a href="#" class="d-none d-xl-block header__options-link">Нужна помощь</a>
-                            <a href="#"
-                                class="d-none d-xl-block header__options-link header__options-link_is-colored">Хочу
-                                помощь</a>
+                            <a href="#" class="d-none d-xl-block header__options-link header__options-link_is-colored">Хочу помощь</a>
                             <div class="lang header__lang">
                                 <div class="lang__wrapper">
                                     <a href="#" class="lang__link">Eng</a>
@@ -212,8 +210,7 @@
                         <div class="row">
                             <div class="col-12 section__col">
                                 <h3 class="section__title help-section__title">Мы с вами помогли</h3>
-                                <div
-                                    class="d-none d-xl-flex carousel-navigation section__navigation help-section__navigation">
+                                <div class="d-none d-xl-flex carousel-navigation section__navigation help-section__navigation">
                                     <button type="button"
                                         class="carousel-navigation__btn carousel-navigation__btn-prev">
                                         <svg width="12.884" height="20.271">
@@ -633,8 +630,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-xl-8 footer__col">
-                        <button data-modal="#order-modal" class="d-xl-none btn btn_is-colored footer__btn"
-                            type="button">Напишите нам</button>
+                        <button data-modal="#order-modal" class="d-xl-none btn btn_is-colored footer__btn" type="button">Напишите нам</button>
                         <div class="footer__navigation">
                             <div class="footer__navigation-col">
                                 <a href="#" class="footer__navigation-link">О фонде</a>
